        - /staff/badges/<badge_id>/edit
    2 - [bug-fix] Fix the concierge log to be refreshed when a status changed occurs (CTT-788)
        - /resources/<resource_id>/roadmaps/<roadmap_id>/badges/<badge_id>
    3 - [bug-fix] Fix the "RP Attention Needed" count displayed in the organisation page (CTT-814)
        - /organizations/<organization_id>

v1.4.0 2025-11-25 dinukadesilva
    1 - [new] Rename all paths and references of "concierge" to "staff" (CTT-758)
        - All the paths starting with /staff
    2 - [fix] Fix the ckeditor5 editor to include underline (CTT-785)
        - /staff/badges/<badge_id>/edit
        - /staff/roadmaps/<roadmap_id>/edit
    3 - [fix] Fix the ckeditor5 editor height to 200px (CTT-785)
        - Everything on (2)
    4 - [fix] Fix widths of badge and task cards (CTT-732)
        - /docs/roadmaps
        - /docs/badges
        - /resources/<resource_id>/roadmaps/<roadmap_id>
        - /resources/<resource_id>/roadmaps/<roadmap_id>/badges/<badge_id>
        - /resources/<resource_id>/edit
        - /resources/<resource_id>/roadmaps/<roadmap_id>/edit

v1.3.0 2025-11-24 dinukadesilva
    1 - [new] Adding a formatted editor for Roadmap Executive Summary Badge Research Summary, Resource Provider Summary, and Verification Summary (CTT-785)
        - /staff/badges/<badge_id>/edit
        - /staff/roadmaps/<roadmap_id>/edit
    2 - [new] Enabling formatted content for badges and roadmaps (CTT-785)
        - /docs/roadmaps
        - /docs/badges
        - /resources/<resource_id>/roadmaps/<roadmap_id>
        - /resources/<resource_id>/roadmaps/<roadmap_id>/badges/<badge_id>
        - /resources/<resource_id>/edit
        - /resources/<resource_id>/roadmaps/<roadmap_id>/edit
    3 - [new] Enabling the badge and task links to open on new tabs (CTT-732)
        - /docs/roadmaps
        - /docs/badges
        - /resources/<resource_id>/roadmaps/<roadmap_id>/badges/<badge_id>
        - /resources/<resource_id>/roadmaps/<roadmap_id>/edit